--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,31 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
 }
+
+.orange{
+  color: orange;
+}
+
+.purple{
+  color: purple;
+}
+
+.rate-container {
+  margin-top: 20px;
+  border-top: 2px solid purple;
+}
+
+.rate-container .fa-star {
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+.movie-item {
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+}
+
+.movie-item svg {
+  font-size: 1.2rem;
+  margin: 16px 5px;
+}
